Rewrite tests to not use the defunct StateMetricConsumer.