@@ -3,12 +3,13 @@ package com.yahoo.container.jdisc.state;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.yahoo.jdisc.Metric;
+import com.yahoo.container.jdisc.RequestHandlerTestDriver;
+import org.junit.Before;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static com.yahoo.container.jdisc.state.MetricsPacketsHandler.APPLICATION_KEY;
 import static com.yahoo.container.jdisc.state.MetricsPacketsHandler.DIMENSIONS_KEY;
@@ -25,9 +26,21 @@ import static org.junit.Assert.assertTrue;
  */
 public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
+    private static final String APPLICATION_NAME = "state-handler-test-base";
+
+    private static MetricsPacketsHandler metricsPacketsHandler;
+
+    @Before
+    public void setupHandler() {
+        metricsPacketsHandlerConfig = new MetricsPacketsHandlerConfig(new MetricsPacketsHandlerConfig.Builder()
+                                                                              .application(APPLICATION_NAME));
+        metricsPacketsHandler = new MetricsPacketsHandler(monitor, timer, snapshotProviderRegistry,
+                                                          metricsPresentationConfig, metricsPacketsHandlerConfig);
+        testDriver = new RequestHandlerTestDriver(metricsPacketsHandler);
+    }
+
     @Test
-    public void only_status_packet_is_returned_prior_to_first_snapshot() throws Exception {
-        metric.add("not_included", 1, null);
+    public void status_packet_is_returned_prior_to_first_snapshot() throws Exception {
         String response = requestAsString("http://localhost/metrics-packets");
 
         List<JsonNode> packets = toJsonPackets(response);
@@ -41,7 +54,7 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
     @Test
     public void metrics_are_included_after_snapshot() throws Exception {
-        metric.add("counter", 1, null);
+        createSnapshotWithCountMetric("counter", 1, null);
         List<JsonNode> packets = incrementTimeAndGetJsonPackets();
         assertEquals(2, packets.size());
 
@@ -51,7 +64,7 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
     @Test
     public void metadata_is_included_in_each_metrics_packet() throws Exception {
-        metric.add("counter", 1, null);
+        createSnapshotWithCountMetric("counter", 1, null);
         List<JsonNode> packets = incrementTimeAndGetJsonPackets();
         JsonNode counterPacket = packets.get(1);
 
@@ -62,7 +75,7 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
     @Test
     public void timestamp_resolution_is_in_seconds() throws Exception {
-        metric.add("counter", 1, null);
+        createSnapshotWithCountMetric("counter", 1, null);
         List<JsonNode> packets = incrementTimeAndGetJsonPackets();
         JsonNode counterPacket = packets.get(1);
 
@@ -71,8 +84,10 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
     @Test
     public void expected_aggregators_are_output_for_gauge_metrics() throws Exception{
-        Metric.Context context = metric.createContext(Collections.singletonMap("dim1", "value1"));
-        metric.set("gauge", 0.2, null);
+        var context = StateMetricContext.newInstance(Map.of("dim1", "value1"));
+        var snapshot = new MetricSnapshot();
+        snapshot.set(context, "gauge", 0.2);
+        snapshotProvider.setSnapshot(snapshot);
 
         List<JsonNode> packets = incrementTimeAndGetJsonPackets();
         JsonNode gaugeMetric = packets.get(1).get(METRICS_KEY);
@@ -84,8 +99,8 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
     @Test
     public void dimensions_from_context_are_included() throws Exception {
-        Metric.Context context = metric.createContext(Collections.singletonMap("dim1", "value1"));
-        metric.add("counter", 1, context);
+        var context = StateMetricContext.newInstance(Map.of("dim1", "value1"));
+        createSnapshotWithCountMetric("counter", 1, context);
 
         List<JsonNode> packets = incrementTimeAndGetJsonPackets();
         JsonNode counterPacket = packets.get(1);
@@ -97,9 +112,11 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
     @Test
     public void metrics_with_identical_dimensions_are_contained_in_the_same_packet() throws Exception {
-        Metric.Context context = metric.createContext(Collections.singletonMap("dim1", "value1"));
-        metric.add("counter1", 1, context);
-        metric.add("counter2", 2, context);
+        var context = StateMetricContext.newInstance(Map.of("dim1", "value1"));
+        var snapshot = new MetricSnapshot();
+        snapshot.add(context, "counter1", 1);
+        snapshot.add(context, "counter2", 2);
+        snapshotProvider.setSnapshot(snapshot);
 
         List<JsonNode> packets = incrementTimeAndGetJsonPackets();
         assertEquals(2, packets.size());
@@ -112,10 +129,12 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
 
     @Test
     public void metrics_with_different_dimensions_get_separate_packets() throws Exception {
-        Metric.Context context1 = metric.createContext(Collections.singletonMap("dim1", "value1"));
-        Metric.Context context2 = metric.createContext(Collections.singletonMap("dim2", "value2"));
-        metric.add("counter1", 1, context1);
-        metric.add("counter2", 1, context2);
+        var context1 = StateMetricContext.newInstance(Map.of("dim1", "value1"));
+        var context2 = StateMetricContext.newInstance(Map.of("dim2", "value2"));
+        var snapshot = new MetricSnapshot();
+        snapshot.add(context1, "counter1", 1);
+        snapshot.add(context2, "counter2", 2);
+        snapshotProvider.setSnapshot(snapshot);
 
         List<JsonNode> packets = incrementTimeAndGetJsonPackets();
         assertEquals(3, packets.size());
@@ -143,6 +162,12 @@ public class MetricsPacketsHandlerTest extends StateHandlerTestBase {
         JsonNode counterMetrics = metricsPacket.get(METRICS_KEY);
         assertTrue(counterMetrics.has(metricName));
         assertEquals(expected, counterMetrics.get(metricName).asLong());
+    }
+
+    private void createSnapshotWithCountMetric(String name, Number value, MetricDimensions context) {
+        var snapshot = new MetricSnapshot();
+        snapshot.add(context, name, value);
+        snapshotProvider.setSnapshot(snapshot);
     }
 
 }
